--- a/JD_AnimationEditor/JD_AnimationEditor/JD_AnimationEditor.csproj
+++ b/JD_AnimationEditor/JD_AnimationEditor/JD_AnimationEditor.csproj
@@ -42,21 +42,33 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Tao.OpenGl, Version=2.1.0.12, Culture=neutral, PublicKeyToken=1ca010269a4501ef, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\TaoFramework\bin\Tao.OpenGl.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animation.cs" />
+    <Compile Include="AnimatedSprite.cs" />
+    <Compile Include="Batch.cs" />
+    <Compile Include="CharacterData.cs" />
+    <Compile Include="CharacterSprite.cs" />
     <Compile Include="Color.cs" />
+    <Compile Include="Font.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frame.cs" />
+    <Compile Include="KernKey.cs" />
+    <Compile Include="Sprite.cs" />
     <Compile Include="Matrix.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderer.cs" />
+    <Compile Include="Text.cs" />
     <Compile Include="Texture.cs" />
     <Compile Include="Vector.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
