--- a/JD_AnimationEditor/JD_AnimationEditor/JD_AnimationEditor.csproj
+++ b/JD_AnimationEditor/JD_AnimationEditor/JD_AnimationEditor.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Text.cs" />
     <Compile Include="Texture.cs" />
     <Compile Include="Vector.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
