--- a/JD_AnimationEditor/JD_AnimationEditor/JD_AnimationEditor.csproj
+++ b/JD_AnimationEditor/JD_AnimationEditor/JD_AnimationEditor.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="AnimatedSprite.cs" />
     <Compile Include="Batch.cs" />
+    <Compile Include="Camera.cs" />
     <Compile Include="CharacterData.cs" />
     <Compile Include="CharacterSprite.cs" />
     <Compile Include="Color.cs" />
